# django-image-uploader-widget

./: .editorconfig  .gitignore  .pre-commit-config.yaml  404.html  CNAME  LICENSE  MANIFEST.in  README.md  docker-compose.yml  gulpfile.js  index.html  jest.config.js  manage.py  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements.dev.txt  setup.py  sitemap.xml  tsconfig.json  webpack.config.js
.github/workflows/: build.yml  docs.yml  lint.yml  publish.yml  test.yml  type-check.yml
array_field/01-tutorial/: index.html
array_field/02-prevent-raw-change/: index.html
array_field/03-htmx/: index.html
array_field/04-force-color-scheme/: index.html
array_field/05-max-images/: index.html
array_field/htmx/: index.html
array_field/prevent-raw-change/: index.html
array_field/tutorial/: index.html
assets/css/: styles.3176ade8.css  styles.760f4e5e.css
assets/js/: 05cbda67.243e0ac1.js  05cbda67.6b48e9da.js  07f0c044.ca0b5435.js  0e384e19.0685638e.js  0e384e19.1f77b455.js  0e384e19.42427064.js  0e384e19.6c127284.js  0e384e19.7411f33f.js  0e384e19.a0cc6530.js  0e384e19.b781638b.js  0e384e19.c89b6ec6.js  0e384e19.cbeff6dd.js  0e384e19.fbbb3ba6.js  0fa09275.16cce19d.js  0fa09275.847f6c41.js  0fa09275.9fa9c92a.js  0fa09275.eb6b3c57.js  14dfcbb9.c67e0642.js  17896441.ac3bc8ca.js  17896441.afebd96f.js  1ad86491.650b9bb6.js  1ad86491.fe864e68.js  1be78505.06650bdc.js  1be78505.4024a8da.js  1be78505.d5ecb328.js  1e352602.11ac96a6.js  1e4b673c.a337e4cd.js  (+289 more)
demo/: settings.py  urls.py
docs/: CNAME  docusaurus.config.js  index.md  package.json  versions.json
image_uploader_widget/: admin.py  widgets.py
image_uploader_widget_demo/: __init__.py  settings.py  urls.py  wsgi.py
search/: search_index.json
src/: ImageUploaderInline.scss  ImageUploaderInline.ts  ImageUploaderWidget.js  ImageUploaderWidget.scss  ImageUploaderWidget.test.ts  ImageUploaderWidget.ts  widget.ts
tests/: __init__.py  admin.py  forms.py  models.py  settings.py  test_case.py  tests_playwright.py  tests_widget.py  urls.py  views.py  wsgi.py
versions/: index.html
(+439 files in other folders)
